--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <section id="News" style="padding-top: 80px; margin-top: -80px;">
             <heading><b>News</b></heading>
             <p>
-              <font color="#F00"><strong><b>12.2023</b>&nbsp&nbsp Check out my latest work</div> <a href="https://vjwq.github.io/AV-CONV/">Audio-Visual Conversational Graph</a>!</strong></font> 🤹‍♀️<br>
-              <b>01.2023</b>&nbsp&nbsp I'll be interning at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023! ♾️👩‍💻<br>
+              <!-- <font color="#F00"><strong><b>12.2023</b>&nbsp&nbsp Check out my latest work</div> <a href="https://vjwq.github.io/AV-CONV/">Audio-Visual Conversational Graph</a>!</strong></font> 🤹‍♀️<br>
+              <b>01.2023</b>&nbsp&nbsp I'll be interning at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023! ♾️👩‍💻<br> -->
               <!-- <b>10.2022</b>&nbsp&nbsp I attended ECCV 22 in person @ Tel-Aviv, Israel. Had so much fun in the Dead Sea! 🌊<br> -->
               <!-- <b>10.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://sites.google.com/view/egocentric-hand-body-activity">HBHA@ECCV22 workshop</a>, thanks for having me! 😊<br>
               <b>10.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://sites.google.com/view/hands2022/home?authuser=0">HANDS@ECCV22 workshop</a>, thanks for having me! 🤓<br>
@@ -110,7 +110,7 @@
           </tr>
         </tbody></table> -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
+          <!-- <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <section id="Publications" style="padding-top: 80px; margin-top: -80px;">
               <heading><b>Publications</b></heading>
@@ -168,7 +168,7 @@
               <p>
               </p>
             </td>
-          </tr>  
+          </tr>   -->
 
           <tr onmouseout="uflow_stop()" onmouseover="uflow_start()">
             <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
