--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <a href="https://arxiv.org/pdf/2312.12870.pdf">paper </a> /
               <a><font color="#ABB0B8">code</font></a> /
               <a><font color="#ABB0B8">dataset</font></a> /
-              <!-- <a href="TODO">paper </a> / -->
+              <a href="TODO">paper </a> /
               <a href="TODO">bibtex</a>
               <p><font color="#009A17"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p>
               <br>
