--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?hl=en&user=lLxTbBoAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/vjwq358">Twitter</a> &nbsp/&nbsp
-                <a href="https://github.com/VJWQ">Github</a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/wenqijia/">LinkedIn</a>
+                <a href="https://github.com/VJWQ">Github</a> 
+                <!-- <a href="https://www.linkedin.com/in/wenqijia/">LinkedIn</a> -->
               </p>
             </td>
             <td style="padding:3%;width:40%;max-width:40%;border-radius:100%; overflow:hidden;">
