--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 <a href="http://www.eie.polyu.edu.hk/~enkmlam/">Prof. Kin-Man Lam</a> as an undergraduate research assistant since my sophomore year. 
               </p>
               <p style="text-align:center">
+              <!-- <p>
+                I have spent a wonderful summer at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023, where I worked with <a href="https://ruohangao.github.io/">Ruohan Gao</a>. 
+              </p> -->
               <section id="Contact" style="padding-top: 80px; margin-top: -40px;">
 
                 <a href="mailto:wenqi.jia@gatech.edu">Email</a> &nbsp/&nbsp
@@ -83,7 +86,7 @@
             <section id="News" style="padding-top: 80px; margin-top: -80px;">
             <heading><b>News</b></heading>
             <p>
-              <b>02.2024</b>&nbsp&nbsp One paper accepted by CVPR '24!! 🎉<br>
+              <font color="#F00"><strong><b>02.2024</b>&nbsp&nbsp One paper accepted by CVPR '24!!</strong></font> 🎉<br>
               <!-- <font color="#F00"><strong><b>12.2023</b>&nbsp&nbsp Check out my latest work</div> <a href="https://vjwq.github.io/AV-CONV/">Audio-Visual Conversational Graph</a>!</strong></font> 🤹‍♀️<br> -->
               <b>01.2023</b>&nbsp&nbsp I'll be interning at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023! ♾️👩‍💻<br>
               <!-- <b>10.2022</b>&nbsp&nbsp I attended ECCV 22 in person @ Tel-Aviv, Israel. Had so much fun in the Dead Sea! 🌊<br> -->
