--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
             <section id="News" style="padding-top: 80px; margin-top: -80px;">
             <heading><b>News</b></heading>
             <p>
-              <font color="#F00"><strong><b>02.2024</b>&nbsp&nbsp One paper accepted by CVPR '24!!</strong></font> 🎉<br>
-              <!-- <font color="#F00"><strong><b>12.2023</b>&nbsp&nbsp Check out my latest work</div> <a href="https://vjwq.github.io/AV-CONV/">Audio-Visual Conversational Graph</a>!</strong></font> 🤹‍♀️<br> -->
+              <font color="#F00"><strong><b>02.2024</b>&nbsp&nbsp One paper accepted by CVPR '24!! Check out my latest work</div> <a href="https://vjwq.github.io/AV-CONV/">AV-CONV</a>!</strong></font> 🎉🤹‍♀️<br>
               <b>01.2023</b>&nbsp&nbsp I'll be interning at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023! ♾️👩‍💻<br>
               <!-- <b>10.2022</b>&nbsp&nbsp I attended ECCV 22 in person @ Tel-Aviv, Israel. Had so much fun in the Dead Sea! 🌊<br> -->
               <!-- <b>10.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://sites.google.com/view/egocentric-hand-body-activity">HBHA@ECCV22 workshop</a>, thanks for having me! 😊<br>
@@ -114,13 +113,13 @@
           </tr>
         </tbody></table> -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <!-- <tr>
+          <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <section id="Publications" style="padding-top: 80px; margin-top: -80px;">
               <heading><b>Publications</b></heading>
             </td>
           </tr>      
-          <tr onmouseout="avconv_stop()" onmouseover="avconv_start()">
+          <tr onmouseout="avconv_stop()" onmouseover="avconv_start()" bgcolor="#ffffd0">
             <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
   
               <div class="one">
@@ -147,7 +146,7 @@
             </td>
             <td style="padding:20px;width:65%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2312.12870">
-                <papertitle>The Audio-Visual Conversational Graph: From an Egocentric-Exocentric Perspective</papertitle>
+                <font color="#F00"><strong>[New!]</strong></font> <papertitle>The Audio-Visual Conversational Graph: From an Egocentric-Exocentric Perspective</papertitle>
               </a>
               <br>
               <strong>Wenqi Jia</strong>,
@@ -158,12 +157,12 @@
               <a href="https://www.vamsiithapu.com/">Vamsi Krishna Ithapu<sup>&dagger;</sup></a>,
               <a href="https://ruohangao.github.io/">Ruohan Gao<sup>&dagger;</sup></a>
               <br>
-              <em>(under review)</em> 
+              <em>CVPR</em>, 2024
               <br>
               <a href="https://vjwq.github.io/AV-CONV/">project</a> /
               <a href="https://arxiv.org/pdf/2312.12870.pdf">paper </a> /
               <a><font color="#ABB0B8">code</font></a> /
-              <a><font color="#ABB0B8">dataset</font></a> /
+              <a><font color="#ABB0B8">dataset (under internal review)</font></a> /
               <a href="TODO">paper </a> /
               <a href="TODO">bibtex</a>
               <p><font color="#009A17"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p>
@@ -172,7 +171,7 @@
               <p>
               </p>
             </td>
-          </tr>   -->
+          </tr>  
 
           <tr onmouseout="uflow_stop()" onmouseover="uflow_start()">
             <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
