--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
             <section id="News" style="padding-top: 80px; margin-top: -80px;">
             <heading><b>News</b></heading>
             <p>
-              <font color="#F00"><strong><b>02.2024</b>&nbsp&nbsp One paper accepted by CVPR '24!! Check out my latest work</div> <a href="https://vjwq.github.io/AV-CONV/">AV-CONV</a>!</strong></font> 🎉🤹‍♀️<br>
+              <font color="#F00"><strong><b>02.2024</b>&nbsp&nbsp One paper accepted by CVPR '24! Check out the </div> <a href="https://vjwq.github.io/AV-CONV/">AV-CONV</a>!!</strong></font> 🎉🤹‍♀️<br>
               <b>01.2023</b>&nbsp&nbsp I'll be interning at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023! ♾️👩‍💻<br>
               <!-- <b>10.2022</b>&nbsp&nbsp I attended ECCV 22 in person @ Tel-Aviv, Israel. Had so much fun in the Dead Sea! 🌊<br> -->
               <!-- <b>10.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://sites.google.com/view/egocentric-hand-body-activity">HBHA@ECCV22 workshop</a>, thanks for having me! 😊<br>
               <b>10.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://sites.google.com/view/hands2022/home?authuser=0">HANDS@ECCV22 workshop</a>, thanks for having me! 🤓<br>
               <b>09.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://ego4d-data.org/workshops/eccv22/">2nd International Ego4D Workshop@ECCV 2022</a>, thanks for having me! 🫡<br> -->
               <b>08.2022</b>&nbsp&nbsp One journal paper accepted by TNNLS! 🎉<br>
-              <b>07.2022</b>&nbsp&nbsp One paper accepted by ECCV '22 Hi Israel!! 🎉✡️<br>
+              <b>07.2022</b>&nbsp&nbsp One paper accepted by ECCV '22!! 🎉✡️<br>
               <!-- <b>06.2022</b>&nbsp&nbsp I attended CVPR 22 in person and got covid 😕 <br> -->
               <b>04.2022</b>&nbsp&nbsp I've accepted my CS PhD offer at Georgia Tech! 🐝🐝🐝 <br>
               <b>04.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/docs/challenge/">Ego4D challenges</a> are alive now! Come join us on the leaderboard! 🏆🚩<br>
@@ -163,8 +163,8 @@
               <a href="https://arxiv.org/pdf/2312.12870.pdf">paper </a> /
               <a><font color="#ABB0B8">code</font></a> /
               <a><font color="#ABB0B8">dataset (under internal review)</font></a> /
-              <a href="TODO">paper </a> /
-              <a href="TODO">bibtex</a>
+              <!-- <a href="TODO">paper </a> / -->
+              <a href="doc/CVPR2024.bib">bibtex</a>
               <p><font color="#009A17"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p>
               <br>
               <p></p>
@@ -199,7 +199,7 @@
               <br>
               <a href="https://persuasion-deductiongame.socialai-data.org">project</a> /
               <a href="https://aps.arxiv.org/pdf/2212.08279">paper</a> /
-              <a href="">bibtex</a>
+              <a href="doc/ACL2023.bib">bibtex</a>
               <br>
               <p></p>
               <p>
@@ -272,7 +272,7 @@
               <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN_poster.pdf">poster</a> /
               <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN_video.mp4">video</a>&nbsp/&nbsp 
               <!-- <a href="https://youtu.be/zBSH-k9GbV4">video</a> -->
-              <a href="doc/EgoGan.bib">bibtex</a>
+              <a href="doc/ECCV2022.bib">bibtex</a>
               <!-- <p><font color="#FF8080"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p> -->
               <p><font color="#009A17"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p>
               <p></p>
