--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp -->
                 <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?hl=en&user=lLxTbBoAAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://twitter.com/vjwq358">Twitter</a> &nbsp/&nbsp
+                <a href="https://twitter.com/Wenqi_Jia">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/VJWQ">Github</a> 
                 <!-- <a href="https://www.linkedin.com/in/wenqijia/">LinkedIn</a> -->
               </p>
