--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <section id="News" style="padding-top: 80px; margin-top: -80px;">
             <heading><b>News</b></heading>
             <p>
+              <b>04.2024</b>&nbsp&nbsp Passed my Qualifier!🧐 I'll be joining UIUC since 24Fall. 🌽🌽🌽🧐🌽🌽🌽<br>
               <font color="#F00"><strong><b>02.2024</b>&nbsp&nbsp One paper accepted by CVPR '24! Check out the </div> <a href="https://vjwq.github.io/AV-CONV/">AV-CONV</a>!!</strong></font> 🎉🤹‍♀️<br>
               <b>01.2023</b>&nbsp&nbsp I'll be interning at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023! ♾️👩‍💻<br>
               <!-- <b>10.2022</b>&nbsp&nbsp I attended ECCV 22 in person @ Tel-Aviv, Israel. Had so much fun in the Dead Sea! 🌊<br> -->
@@ -95,9 +96,9 @@
               <b>08.2022</b>&nbsp&nbsp One journal paper accepted by TNNLS! 🎉<br>
               <b>07.2022</b>&nbsp&nbsp One paper accepted by ECCV '22!! 🎉✡️<br>
               <!-- <b>06.2022</b>&nbsp&nbsp I attended CVPR 22 in person and got covid 😕 <br> -->
-              <b>04.2022</b>&nbsp&nbsp I've accepted my CS PhD offer at Georgia Tech! 🐝🐝🐝 <br>
-              <b>04.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/docs/challenge/">Ego4D challenges</a> are alive now! Come join us on the leaderboard! 🏆🚩<br>
-              <b>03.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/">Ego4D</a> paper has been accepted by CVPR '22 and selected for an oral presentation! 🥂<br>
+              <b>04.2022</b>&nbsp&nbsp I've accepted my CS PhD offer at Georgia Tech. 🐝🐝🐝 <br>
+              <!-- <b>04.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/docs/challenge/">Ego4D challenges</a> are alive now! Come join us on the leaderboard! 🏆🚩<br> -->
+              <b>03.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/">Ego4D</a> paper has been accepted by CVPR '22 as an oral paper! 🥂<br>
             </p>
           </td>
         </tr>
