--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
             <section id="News" style="padding-top: 80px; margin-top: -80px;">
             <heading><b>News</b></heading>
             <p>
+              <b></b>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp; 🌽🌽🌽🌽🌽🌽🌽<br>
               <b>04.2024</b>&nbsp&nbsp Passed my Qualifier!🧐 I will transfer to UIUC in Fall 24. 🌽🌽🌽🧐🌽🌽🌽<br>
+              <b></b>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp; 🌽🌽🌽🌽🌽🌽🌽<br>
               <font color="#F00"><strong><b>02.2024</b>&nbsp&nbsp One paper accepted by CVPR '24! Check out the </div> <a href="https://vjwq.github.io/AV-CONV/">AV-CONV</a>!!</strong></font> 🎉🤹‍♀️<br>
               <b>01.2023</b>&nbsp&nbsp I'll be interning at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023! ♾️👩‍💻<br>
               <!-- <b>10.2022</b>&nbsp&nbsp I attended ECCV 22 in person @ Tel-Aviv, Israel. Had so much fun in the Dead Sea! 🌊<br> -->
