--- a/index.html
+++ b/index.html
@@ -41,20 +41,22 @@
                 <name><b>Wenqi Jia</b></name>
               </p>
               <heading>Hey! &#x1F60a</heading>
-              <p>I am a second-year PhD student in Computer Science at the 
-                <a href="https://www.gatech.edu/">Georgia Institute of Technology (GaTech)</a>, working with 
+              <p>I am a third-year PhD student in Computer Science at 
+                <del>Georgia Tech</del> <a href="https://illinois.edu/"> <b>UIUC</b></a>, working with 
                 <a href="https://rehg.org/">Prof. James Rehg</a> and co-advised by <a href="https://faculty.cc.gatech.edu/~danfei/">Prof. Danfei Xu</a>. I received my B.Eng from the 
-                <a href="https://www.polyu.edu.hk/">Hong Kong Polytechnic University</a>, majoring in Electronic and Information Engineering. I was working in
+                <a href="https://www.polyu.edu.hk/">Hong Kong Polytechnic University</a>, majoring in Electronic and Information Engineering. 
+                <!-- I was working in
                 <a href="https://www.polyu.edu.hk/eie/research/research-highlights/10-research/249-research-focus-area-details/#focus_area_ai_robotics">Signal Processing Lab</a> with 
-                <a href="http://www.eie.polyu.edu.hk/~enkmlam/">Prof. Kin-Man Lam</a> as an undergraduate research assistant since my sophomore year. 
+                <a href="http://www.eie.polyu.edu.hk/~enkmlam/">Prof. Kin-Man Lam</a> as an undergraduate research assistant since my sophomore year.  -->
               </p>
               <p style="text-align:center">
-              <!-- <p>
-                I have spent a wonderful summer at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023, where I worked with <a href="https://ruohangao.github.io/">Ruohan Gao</a>. 
-              </p> -->
+              <p>
+                I have spent a wonderful summer at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023, where I worked with <a href="https://ruohangao.github.io/">Ruohan Gao</a> and <a href="https://www.vamsiithapu.com/">Vamsi Ithapu</a>. 
+              </p>
               <section id="Contact" style="padding-top: 80px; margin-top: -40px;">
 
-                <a href="mailto:wenqi.jia@gatech.edu">Email</a> &nbsp/&nbsp
+                <a href="mailto:wenqij5@illinois.edu">Email</a> &nbsp/&nbsp
+                <!-- <a href="mailto:wenqi.jia@gatech.edu">Email</a> &nbsp/&nbsp -->
                 <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp -->
                 <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?hl=en&user=lLxTbBoAAAAJ">Google Scholar</a> &nbsp/&nbsp
@@ -466,7 +468,7 @@
                 <heading><b>Academic Service and Honor</b></heading>
                 <ul>
                   <!-- <li><b>Talk</b> 🎤, HANDS@ECCV22 workshop, 2nd International Ego4D Workshop@ECCV 2022</li> -->
-                  <li><b>Reviewer</b> 🔎, CVPR '22, '23, '24, ECCV '22 </li>
+                  <li><b>Reviewer</b> 🔎, CVPR '22, '23, '24, ECCV '22, '24, BMVC '24 </li>
                   <!-- <li><b>Reviewer</b>, </li> -->
                   <li><b>First Runner Up</b> 🥈, IEEE Video and Image Processing Cup (VIP Cup) 2017</li>
                 </ul>
