--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 
 <body id="Home">
   <header id="nav-wrapper">
-    <nav class="navbar navbar-expand-md navbar-custom fixed-top bg-dark" id="Home" data-scroll-id="Home" tabindex="-1" style="outline: none;">
+    <!-- <nav class="navbar navbar-expand-md navbar-custom fixed-top bg-dark" id="Home" data-scroll-id="Home" tabindex="-1" style="outline: none;">
       <a href="#Home" class="nav-link active"><span class="nav-link-span"><span class="u-nav"><b>Home</b></span></span></a>
       <div class="collapse navbar-collapse" id="navbarToggle">
-      <!-- <div class="nav right pull-right" style="float: right;"> -->
         <a href="#Research" class="nav-link"><span class="nav-link-span"><span class="u-nav"><b>Research</b></span></span></a>
         <a href="#News" class="nav-link"><span class="nav-link-span"><span class="u-nav"><b>News</b></span></span></a>
         <a href="#Publications" class="nav-link"><span class="nav-link-span"><span class="u-nav"><b>Publications</b></span></span></a>
@@ -29,7 +28,7 @@
         <a href="#Fun Facts" class="nav-link"><span class="nav-link-span"><span class="u-nav"><b>Fun facts about me!</b></span></span></a>
         <a href="#Contact" class="nav-link"><span class="nav-link-span"><span class="u-nav"><b>Contact</b></span></span></a>
       </div>
-    </nav>
+    </nav> -->
   </header>
   <table style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
