--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
               <p>
                 <!-- My research interests lie in Computer Vision and Machine Learning. I'm particularly interested in hand-object interaction under the First-Person perspective and aim to leverage Egocentric Vision to model daily activities and social behaviors to help understand the interaction between humans and their surrounding world.                 My research interests lie in Computer Vision (CV), Video Analysis and Human-Computer Interaction (HCI). I’m particularly interested in hand-object interaction under the First-Person perspective, and aim to leverage Egocentric Vision to model daily activities and social behaviors to help build Human-Centric AI. -->
                 <!-- My research lies at the intersection of Computer Vision and Machine Learning, with a focus on egocentric perception and predictive modeling of human behaviors. I aim to leverage multi-modal first-person signals — including visual, auditory, and motor cues — to understand and anticipate how humans interact with objects, people, and the environment, with the broader goal of enabling intelligent agents to perceive, reason, and act in human-centered, real-world scenarios. -->
-                My research focuses on egocentric perception and predictive modeling of human behavior. I explore how multi-modal first-person signals—including visual, auditory, and motor cues—can be used to understand and anticipate human interactions with objects, people, and environments. The broader goal is to enable intelligent agents to perceive, reason, and act in human-centered, real-world scenarios.
+                <b>
+                  My research focuses on egocentric perception and predictive modeling of human behavior. I explore how multi-modal first-person signals—including visual, auditory, and motor cues—can be used to understand and anticipate human interactions with objects, people, and environments. The broader goal is to enable intelligent agents to perceive, reason, and act in human-centered, real-world scenarios.
+                </b>
                 <br>
-                This has led me to explore how egocentric cues can be integrated with 3D human understanding and embodied systems, with potential applications in robotics and AR/VR. <font color="#F00">If you're interested in chatting or collaborating in this direction, feel free to drop me an email :)</font>
+                This has led me to explore how egocentric cues can be integrated with 3D human understanding and embodied systems, with potential applications in robotics and AR/VR. <font color="#F00">Shoot me an email if you're interested in chatting or collaborating :)</font>
               </p>
             </td>
           </tr>
@@ -94,11 +96,14 @@
             <section id="News" style="padding-top: 80px; margin-top: -80px;">
             <heading><b>News</b></heading>
             <p>
-              <b></b>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp; 🌽🌽🌽🌽🌽🌽🌽<br>
-              <b>04.2024</b>&nbsp&nbsp Passed my Qualifier!🧐 I will transfer to UIUC in Fall 24. 🌽🌽🌽🧐🌽🌽🌽<br>
-              <b></b>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp; 🌽🌽🌽🌽🌽🌽🌽<br>
-              <font color="#F00"><strong><b>02.2024</b>&nbsp&nbsp One paper accepted by CVPR '24! Check out the </div> <a href="https://vjwq.github.io/AV-CONV/">AV-CONV</a>!!</strong></font> 🎉🤹‍♀️<br>
-              <b>01.2023</b>&nbsp&nbsp I'll be interning at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023! ♾️👩‍💻<br>
+              <b>02.2025</b>&nbsp&nbsp One paper accepted by CVPR '25! Check out the </div> <a href="">SocialGesture</a>!!🎉<br>
+              <b>10.2024</b>&nbsp&nbsp One paper accepted by ECCV '24! Check out the </div> <a href="https://bolinlai.github.io/CSTS-EgoGazeAnticipation/">EgoGaze</a>!!🎉<br>
+              <!-- <b></b>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp; 🌽🌽🌽🌽🌽🌽🌽<br> -->
+              <b>04.2024</b>&nbsp&nbsp Passed my Qualifier! I will transfer to UIUC in Fall 24. 🌽🌽🌽🧐🌽🌽🌽<br>
+              <!-- <b></b>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp; 🌽🌽🌽🌽🌽🌽🌽<br> -->
+              <!-- <font color="#F00"><strong><b>02.2024</b>&nbsp&nbsp One paper accepted by CVPR '24! Check out the </div> <a href="https://vjwq.github.io/AV-CONV/">AV-CONV</a>!!</strong></font> 🎉🤹‍♀️<br> -->
+              <b>02.2024</b>&nbsp&nbsp One paper accepted by CVPR '24! Check out the </div> <a href="https://vjwq.github.io/AV-CONV/">AV-CONV</a>!!🎉🤹‍♀️<br>
+              <!-- <b>01.2023</b>&nbsp&nbsp I'll be interning at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023! ♾️👩‍💻<br> -->
               <!-- <b>10.2022</b>&nbsp&nbsp I attended ECCV 22 in person @ Tel-Aviv, Israel. Had so much fun in the Dead Sea! 🌊<br> -->
               <!-- <b>10.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://sites.google.com/view/egocentric-hand-body-activity">HBHA@ECCV22 workshop</a>, thanks for having me! 😊<br>
               <b>10.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://sites.google.com/view/hands2022/home?authuser=0">HANDS@ECCV22 workshop</a>, thanks for having me! 🤓<br>
@@ -123,6 +128,37 @@
           <tr>
             <td style="padding:20px;width:40%;vertical-align:middle;">
               <div class="one">
+                <img src='imgs/vcr.png'width="200%">
+
+              </div>
+            </td>
+            <td style="padding:20px;width:60%;vertical-align:middle;">
+              <a href="">
+                <papertitle>Learning Predictive Visuomotor Coordination</papertitle>
+              </a>
+              <br>
+              <strong>Wenqi Jia</strong>, 
+              <a href="https://bolinlai.github.io/">Bolin Lai</a>,
+              <a href="https://aptx4869lm.github.io/">Miao Liu</a>,
+              <a href="https://faculty.cc.gatech.edu/~danfei/">Danfei Xu<sup>&dagger;</sup></a>,
+              <a href="https://rehg.org/">James M. Rehg<sup>&dagger;</sup></a>
+              <br>
+              <em>arXiv</em>
+              <br>
+              <a href="https://vjwq.github.io/VCR/"><font color="#ABB0B8">project</font></a> /
+              <a href="https://arxiv.org/abs/2503.23300">paper</a> /
+              <a href=""><font color="#ABB0B8">code</font></a>
+
+              <!-- <a href="https://github.com/BolinLai/CSTS">code<a> / 
+              <a href="https://github.com/BolinLai/CSTS/tree/main/data">data Split</a> /
+              <a href="https://www.ecva.net/papers/eccv_2024/papers_ECCV/papers/01396-supp.pdf">supplementary</a> /
+              <a href="https://www.youtube.com/watch?v=5ApMaLhlxUc">video</a> /
+              <a href="https://eccv2024.ecva.net/media/PosterPDFs/ECCV%202024/268.png?t=1726967693.823367">poster</a> -->
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:40%;vertical-align:middle;">
+              <div class="one">
                 <img src='imgs/socialgesture.png'width="120%">
 
               </div>
@@ -143,7 +179,12 @@
               <em>CVPR</em>, 2025
               <br>
               <!-- <a href="https://bolinlai.github.io/CSTS-EgoGazeAnticipation/">project</a> / -->
-              <a href="">paper (coming soon)</a>
+              <a href=""><font color="#ABB0B8">project</font></a> / 
+              <a href=""><font color="#ABB0B8">paper</font></a> / 
+              <a href=""><font color="#ABB0B8">code</font></a> / 
+              <a href=""><font color="#ABB0B8">dataset</font></a> / 
+              <a href=""><font color="#ABB0B8">poster</font></a>
+              <!-- <a href="">paper (coming soon)</a> -->
               <!-- <a href="https://github.com/BolinLai/CSTS">code<a> / 
               <a href="https://github.com/BolinLai/CSTS/tree/main/data">data Split</a> /
               <a href="https://www.ecva.net/papers/eccv_2024/papers_ECCV/papers/01396-supp.pdf">supplementary</a> /
@@ -181,8 +222,9 @@
               <a href="https://eccv2024.ecva.net/media/PosterPDFs/ECCV%202024/268.png?t=1726967693.823367">poster</a>
             </td>
           </tr>
-          <tr onmouseout="avconv_stop()" onmouseover="avconv_start()" bgcolor="#ffffd0">
-            <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
+          <!-- <tr onmouseout="avconv_stop()" onmouseover="avconv_start()" bgcolor="#ffffd0"> -->
+          <tr onmouseout="avconv_stop()" onmouseover="avconv_start()">
+              <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
   
               <div class="one">
                 <div class="two" id='avconv'>
@@ -223,7 +265,7 @@
               <br>
               <a href="https://vjwq.github.io/AV-CONV/">project</a> /
               <a href="https://arxiv.org/pdf/2312.12870.pdf">paper </a> /
-              <a><font color="#ABB0B8">code</font></a> /
+              <a href="https://github.com/VJWQ/AV-CONV"><font color="#F00"><strong>code</strong></font></a> /
               <a><font color="#ABB0B8">dataset (under internal review)</font></a> /
               <!-- <a href="TODO">paper </a> / -->
               <a href="doc/CVPR2024.bib">bibtex</a>
@@ -239,7 +281,7 @@
             <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
   
               <div class="one">
-                  <img src='imgs/acl23.png'width="180%">
+                  <img src='imgs/acl23.png'width="200%">
               </div>
             </td>
             <td style="padding:20px;width:65%;vertical-align:middle">
@@ -294,7 +336,8 @@
             </td>
           </tr>  -->
           <!-- <tr onmouseout="mip360_stop()" onmouseover="mip360_start()" bgcolor="#ffffd0"> -->
-          <tr onmouseout="mip360_stop()" onmouseover="mip360_start()" bgcolor="#ffffd0">
+          <!-- <tr onmouseout="mip360_stop()" onmouseover="mip360_start()" bgcolor="#ffffd0"> -->
+          <tr onmouseout="mip360_stop()" onmouseover="mip360_start()">
               <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
               <div class="one">
                 <div class="two" id='mip360_image'>
