--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <em>arXiv</em>
               <br>
               <a href="https://vjwq.github.io/VCR/"><font color="#ABB0B8">project</font></a> /
-              <a href="https://arxiv.org/abs/2503.23300">paper</a> /
+              <a href="https://arxiv.org/abs/2503.23300">arxiv</a> /
               <a href=""><font color="#ABB0B8">code</font></a>
 
               <!-- <a href="https://github.com/BolinLai/CSTS">code<a> / 
