--- a/index.html
+++ b/index.html
@@ -180,10 +180,9 @@
               <br>
               <!-- <a href="https://bolinlai.github.io/CSTS-EgoGazeAnticipation/">project</a> / -->
               <a href=""><font color="#ABB0B8">project</font></a> / 
-              <a href=""><font color="#ABB0B8">paper</font></a> / 
-              <a href=""><font color="#ABB0B8">code</font></a> / 
-              <a href=""><font color="#ABB0B8">dataset</font></a> / 
-              <a href=""><font color="#ABB0B8">poster</font></a>
+              <a href="https://arxiv.org/abs/2504.02244">arXiv</a> / 
+              <a href="https://github.com/IrohXu/SocialGesture">code</a> / 
+              <a href="https://huggingface.co/datasets/IrohXu/SocialGesture">dataset</a> 
               <!-- <a href="">paper (coming soon)</a> -->
               <!-- <a href="https://github.com/BolinLai/CSTS">code<a> / 
               <a href="https://github.com/BolinLai/CSTS/tree/main/data">data Split</a> /
