adding random funfacts

--- a/index.html
+++ b/index.html
@@ -647,11 +647,12 @@
                 <img src="country/qa.png" width="30" height="30" style="float:left">
                 <img src="country/ca.png" width="30" height="30" style="float:left">
               </p><br><br> 
-              <li>I'm <b>Chinese</b> and if you wonder what's the correct pronunciation of my name (with the tones!), try to say the brand "<a href="https://www.google.com/search?q=givenchy+pronunciation+in+british+english">Givenchy</a>"in British accent 🤣</li>
-              <li>I play the <b>piano</b> 🎹 & very into classical music</li>
+              <!-- <li>I'm <b>Chinese</b> and if you wonder what's the correct pronunciation of my name (with the tones!), try to say the brand "<a href="https://www.google.com/search?q=givenchy+pronunciation+in+british+english">Givenchy</a>"in British accent 🤣</li> -->
+              <li>I play the <b>piano</b> 🎹 & very into classical music. </li>
+              <li>I'm a <b>J-Rock fan</b>! Read my article on the fascinating cultural phenomenon <a href="https://en.wikipedia.org/wiki/Visual_kei">Visual Kei</a>: <a href="doc/MUS518_Final_Paper_Wenqi.pdf"><em>Staging Cultural Fusion and Gender Performativity</em></a>.</li
               <li>I love <b>Renaissance</b> art and <b>Surrealism</b>! During the pandemic I was admitted as a <a href="https://arthistory.hku.hk/index.php/academic-programmes/master-of-arts-in-art-history/">Master of Arts in Art History</a> at the <a href="https://www.hku.hk/">University of Hong Kong</a> (but didn't enrol cause I decided to be focused on my passion in Computer Science first 👩‍💻)</li>
-              <li>I learned my <b>Japanese</b> through Anime (<a href="https://www.netflix.com/title/70205012">NARUTO</a> is my favorite 🔥)</li>
-              <li>Je parle un peu <b>français</b> (a beginner who likes to say Je ne sais pas) 🧐 </li>
+              <!-- <li>I learned my <b>Japanese</b> through Anime (<a href="https://www.netflix.com/title/70205012">NARUTO</a> is my favorite 🔥)</li> -->
+              <!-- <li>Je parle un peu <b>français</b> (a beginner who likes to say Je ne sais pas) 🧐 </li> -->
               </ul>
             </td>
           </tr>
